FIX: IE issue with scrollbars

--- a/Resources/Private/Styles/signalwerk/components/html.scss
+++ b/Resources/Private/Styles/signalwerk/components/html.scss
@@ -49,7 +49,7 @@ h1,
 h2,
 h3 {
   margin-top: 0.25em;
-  margin-bottom: 0;
+  margin-bottom: 0.1rem;
   line-height: 1.1;
 }
 
